Begin webpack setup

--- a/package.json
+++ b/package.json
@@ -15,5 +15,18 @@
   "bugs": {
     "url": "https://github.com/OrgJigglyPuff/SneakersAndDonuts/issues"
   },
-  "homepage": "https://github.com/OrgJigglyPuff/SneakersAndDonuts#readme"
+  "homepage": "https://github.com/OrgJigglyPuff/SneakersAndDonuts#readme",
+  "dependencies": {
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.18.0",
+    "@babel/preset-env": "^7.18.0",
+    "@babel/preset-react": "^7.17.12",
+    "html-webpack-plugin": "^5.5.0",
+    "webpack": "^5.72.1",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.9.0"
+  }
 }
