--- a/package.json
+++ b/package.json
@@ -10,16 +10,12 @@
     "dev": "NODE_ENV=development webpack serve --open & nodemon server/server.js"
   },
   "repository": {
-    "type": "git",
-    "url": "git+https://github.com/DRPalumbo17/petfinder.git"
+    "type": "git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/DRPalumbo17/petfinder/issues"
-  },
-  "homepage": "https://github.com/DRPalumbo17/petfinder#readme",
+  
   "dependencies": {
     "@babel/core": "^7.17.9",
     "@babel/polyfill": "^7.12.1",
@@ -30,6 +26,7 @@
     "babel": "^6.23.0",
     "babel-loader": "^8.2.4",
     "css-loader": "^6.7.1",
+    "dotenv": "^16.0.1",
     "express": "^4.17.3",
     "html-webpack-plugin": "^5.5.0",
     "nodemon": "^2.0.15",
@@ -46,5 +43,9 @@
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.8.1"
+  },
+  "devDependencies": {
+    "mongodb": "^4.6.0",
+    "mongoose": "^6.3.4"
   }
 }
