--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Sneakers and Donuts e-commerce application",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack-dev-server --mode development --open --hot",
+    "build": "webpack --mode production"
   },
   "repository": {
     "type": "git",
