--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  
   "dependencies": {
     "@babel/core": "^7.17.9",
     "@babel/polyfill": "^7.12.1",
@@ -25,6 +24,7 @@
     "axios": "^0.26.1",
     "babel": "^6.23.0",
     "babel-loader": "^8.2.4",
+    "bcryptjs": "^2.4.3",
     "css-loader": "^6.7.1",
     "dotenv": "^16.0.1",
     "express": "^4.17.3",
