--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "axios": "^0.26.1",
     "babel": "^6.23.0",
     "babel-loader": "^8.2.4",
+    "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
     "css-loader": "^6.7.1",
     "dotenv": "^16.0.1",
