--- a/package.json
+++ b/package.json
@@ -1,16 +1,24 @@
 {
-  "name": "petfinder",
+  "name": "sneakersanddonuts",
   "description": "",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" & exit 1",
+    "test": "jest --verbose",
     "start": "nodemon server/server.js",
     "build": "NODE_ENV=production webpack",
     "dev": "NODE_ENV=development webpack serve --open & nodemon server/server.js"
   },
   "repository": {
     "type": "git"
+  },
+  "jest": {
+    "globalSetup": "./jest-setup.js",
+    "globalTeardown": "./jest-teardown.js",
+    "testEnvironment": "jest-environment-jsdom",
+    "setupFilesAfterEnv": [
+      "@testing-library/jest-dom/extend-expect"
+    ]
   },
   "keywords": [],
   "author": "",
@@ -30,6 +38,8 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "html-webpack-plugin": "^5.5.0",
+    "jest": "^28.1.0",
+    "jest-environment-jsdom": "^28.1.0",
     "nodemon": "^2.0.15",
     "pg": "^8.7.3",
     "react": "^18.0.0",
@@ -38,14 +48,17 @@
     "react-router-dom": "^6.3.0",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
+    "regenerator-runtime": "^0.13.9",
     "sass": "^1.50.0",
     "sass-loader": "^12.6.0",
     "style-loader": "^3.3.1",
+    "supertest": "^6.2.3",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.8.1"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.4",
     "mongodb": "^4.6.0",
     "mongoose": "^6.3.4"
   }
